examples/negative/parse_errors/L1/reserved_while.ob
MODULE Reserved;

VAR WHILE: INTEGER;

END Reserved.
